--- a/css/common.css
+++ b/css/common.css
@@ -1394,7 +1394,8 @@ input, textarea, button {
 /*div for input, label, button*/
 /* line 827, ../scss/common.scss */
 .form-field .form-field__txt {
-  width: 220px;
+  display: block;
+  width: 302px;
   height: 26px;
   line-height: 26px;
   padding-left: 8px;
@@ -1410,7 +1411,26 @@ input, textarea, button {
   background: #F4F4F4;
   font-size: 13px;
 }
-/* line 840, ../scss/common.scss */
+/* line 841, ../scss/common.scss */
+.form-field textarea {
+  width: 290px;
+  height: 50px;
+  line-height: 1.3;
+  padding: 5px 10px;
+  margin: 0 20px 20px 0;
+  border-top: 1px solid #A6A6A6;
+  border-left: 1px solid #A6A6A6;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  border-radius: 3px;
+  background: #F4F4F4;
+  font-family: Tahoma, Arial, sans-serif;
+  font-size: 13px;
+}
+/* line 855, ../scss/common.scss */
 .form-field .form-field__btn {
   position: relative;
   display: block;
@@ -1446,14 +1466,14 @@ input, textarea, button {
   transition: background-color 0.5s ease-out;
   cursor: pointer;
 }
-/* line 858, ../scss/common.scss */
+/* line 873, ../scss/common.scss */
 .form-field .form-field__btn:hover {
   background-color: #ffecab;
   -webkit-box-shadow: #d0d0d0 0px 1px 5px;
   -moz-box-shadow: #d0d0d0 0px 1px 5px;
   box-shadow: #d0d0d0 0px 1px 5px;
 }
-/* line 862, ../scss/common.scss */
+/* line 877, ../scss/common.scss */
 .form-field .form-field__btn:active {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
@@ -1468,9 +1488,15 @@ input, textarea, button {
   background-image: linear-gradient(#ff9e03, #ffd856);
   line-height: 30px;
 }
-/* line 869, ../scss/common.scss */
-.form-field label {
-  display: inline-block;
-  height: 26px;
-  line-height: 26px;
+/* line 884, ../scss/common.scss */
+.form-field .form-field__check, .form-field .form-field__radio {
+  position: relative;
+  margin-bottom: 20px;
+  padding-left: 20px;
+}
+/* line 888, ../scss/common.scss */
+.form-field .form-field__check input, .form-field .form-field__radio input {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
