--- a/scss/common.scss
+++ b/scss/common.scss
@@ -825,7 +825,8 @@ input, textarea, button {
 /*div for input, label, button*/
 .form-field {
 	.form-field__txt {
-		width: 220px;
+		display: block;
+		width: 302px;
 		height: 26px;
 		line-height: 26px;
 		padding-left: 8px;
@@ -835,6 +836,20 @@ input, textarea, button {
 		@include border-radius(3px);
 		border-radius: 3px;
 		background: #F4F4F4;
+		font-size: 13px;
+	}
+	textarea {
+		width: 290px;
+		height: 50px;
+		line-height: 1.3;
+		padding: 5px 10px;
+		margin: 0 20px 20px 0;
+		border-top: 1px solid #A6A6A6;
+		border-left: 1px solid #A6A6A6;
+		@include border-radius(3px);
+		border-radius: 3px;
+		background: #F4F4F4;
+		font-family: Tahoma, Arial, sans-serif;
 		font-size: 13px;
 	}
 	.form-field__btn {
@@ -866,9 +881,14 @@ input, textarea, button {
 			line-height: 30px;
 		}
 	}
-	label {
-		display: inline-block;
-		height: 26px;
-		line-height: 26px;
+	.form-field__check, .form-field__radio {
+		position: relative;
+		margin-bottom: 20px;
+		padding-left: 20px;
+		input {
+			position: absolute;
+			top: 0;
+			left: 0;
+		}
 	}
 }
